feat: Complete Razorpay Payment Gateway Integration
✨ New Features:
- Razorpay payment service (order creation, verification, refunds)
- Payment checkout and success pages
- Book Now buttons with direct payment flow
- ₹1 test hotel for payment verification
- Admin panel authentication
- HotelBeds API integration

🔧 Backend Updates:
- razorpay_service.py: Full payment processing
- payment_routes.py: Payment API endpoints
- admin_service.py: JWT authentication
- config.py: Razorpay credentials support

🎨 Frontend Updates:
- payment-checkout.html: Professional checkout page
- payment-success.html: Confirmation page
- hotel-results.js: bookHotel() function added

🔒 Security:
- .gitignore: Protects API keys and .env
- .env.example: Template for credentials
- Payment signature verification (HMAC SHA-256)

✅ Tested and working with real Razorpay keys

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,18 @@
-# ETG/RateHawk API Credentials (Sandbox)
-ETG_API_KEY_ID=your_etg_api_key_id
-ETG_API_KEY_SECRET=your_etg_api_key_secret
-ETG_API_BASE_URL=https://api.worldota.net/api/b2b/v3
+# Environment Variables Template
+# Copy this file to .env and update with your actual credentials
+
+# ETG/RateHawk API Credentials
+ETG_API_KEY_ID=your_etg_key_id
+ETG_API_KEY_SECRET=your_etg_secret
+ETG_API_BASE_URL=https://api-sandbox.worldota.net/api/b2b/v3
 
 # Supabase Configuration
-SUPABASE_URL=https://bcxkjvjchutgfuyklphx.supabase.co
+SUPABASE_URL=your_supabase_url
 SUPABASE_ANON_KEY=your_supabase_anon_key
 SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
 
 # Google Maps API
-GOOGLE_MAPS_API_KEY=your_google_maps_api_key
+GOOGLE_MAPS_API_KEY=your_google_maps_key
 
 # Flask Configuration
 FLASK_ENV=development
@@ -19,3 +22,9 @@ FLASK_SECRET_KEY=your_secret_key_here
 # Server Configuration
 HOST=0.0.0.0
 PORT=5000
+
+# Razorpay Payment Gateway
+# Get your keys from: https://dashboard.razorpay.com/app/keys
+RAZORPAY_KEY_ID=rzp_test_xxxxxxxxxxxxxxxx
+RAZORPAY_KEY_SECRET=your_razorpay_secret_here
+RAZORPAY_WEBHOOK_SECRET=your_webhook_secret_here
