--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -19,5 +19,12 @@ python-dateutil==2.8.2
 # Google Maps (optional, for geocoding)
 googlemaps==4.10.0
 
+# Authentication
+bcrypt>=4.0.0
+PyJWT>=2.0.0
+
+# Payment Gateway
+razorpay>=1.4.0
+
 # Production server
 gunicorn==21.2.0
