--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,11 +4,11 @@ Flask-CORS==4.0.0
 python-dotenv==1.0.0
 
 # Supabase
-supabase==2.3.0
+supabase>=2.10.0
 
 # HTTP requests
 requests==2.31.0
-httpx>=0.24.0,<0.25.0
+httpx>=0.27.0
 
 # Data validation
 pydantic>=2.0.0
