--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -35,3 +35,5 @@ gunicorn==21.2.0
 # Email API (works on Render - uses HTTPS instead of blocked SMTP ports)
 resend>=2.0.0
 sendgrid>=6.9.0
+# Flight API
+duffel-api>=0.40.0
