--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,11 +4,14 @@ Flask-CORS==4.0.0
 python-dotenv==1.0.0
 
 # Supabase
-supabase>=2.10.0
+supabase>=2.28.0
+postgrest>=2.28.0
+gotrue>=2.12.0
+websockets>=15.0.0
 
 # HTTP requests
 requests==2.31.0
-httpx>=0.27.0
+httpx>=0.28.1
 
 # Data validation
 pydantic>=2.0.0
